--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Leqi LEI's homepage
-description: Leqi LEI, A 2nd-year master student from the CoAI Group, DCST, Tsinghua University
+description: Leqi LEI, a second-year master's student from the CoAI Group, DCST, Tsinghua University.
